@@ -61,6 +61,7 @@ Modified:
 	- Changes made to the Sprite provided in the constructor will not be reflected in the Beam, and vis-versa
 	- Wrap[S/T]Mode are automatically set to proper values for the spritesheet to loop vertically
 * "Hush AI Fixes" patch will no longer be applied during daily runs.
+* Deal rooms with variants above 99 will now also generate in Red Rooms
 /newline/
 Fixes:
 	- 
